# rust-demo

./: Cargo.toml
examples/struct_data/: max_sliding_window.rs  min_stack.rs  move_zeroes.rs  plus_one.rs  remove_duplicates.rs  valid_parentheses.rs
restaurant/src/: lib.rs
restaurant/src/front_of_house/: hosting.rs  serving.rs
src/: main.rs
